updated swagger and api
